syntax = "proto3";

package com.hp.grpc.api;

option java_multiple_files = true;

// 请求消息
message ChatDTO {
  string message  = 1;
}

// 响应消息
message ChatVO {
  string message  = 1;
}

// 服务定义
service ChatService {
  rpc sendMessage (stream ChatDTO) returns (stream ChatVO);
}
